[tool.poetry]
name = "cashfree_pg"
version = "5.0.5"
description = "Cashfree Payment Gateway APIs"
authors = ["API Support <developers@cashfree.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/cashfree/cashfree-pg-sdk-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Cashfree Payment Gateway APIs"]
include = ["cashfree_pg/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "2.11.7"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
